--- a/CriminalIntent/app/src/main/res/layout-land/fragment_crime.xml
+++ b/CriminalIntent/app/src/main/res/layout-land/fragment_crime.xml
@@ -18,7 +18,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/crime_details_label"
-        style="?android:listSeparatorTextViewStyle"/>
+        style="?android:listSeparatorTextViewStyle"
+        />
 
     <LinearLayout
         android:orientation="horizontal"
@@ -31,6 +32,13 @@
             android:id="@+id/crime_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
+            />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/crime_time"
             android:layout_weight="1"/>
 
         <CheckBox
